--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ include = [
     "LICENSE-APACHE",
 ]
 
-[badges.travis-ci]
-branch = "master"
-repository = "eldruin/ds323x-rs"
+[badges]
+travis-ci = { repository = "eldruin/ds323x-rs", branch = "master" }
+maintenance = { status = "actively-developed" }
 
 [dependencies]
 embedded-hal = "0.2"
