--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,31 @@
 language: rust
+# sudo is required to enable kcov to use the personality syscall
+sudo: required
+
+before_script:
+  - eval git pull --rebase https://github.com/eldruin/ds323x-rs master
+  - eval git log --pretty=oneline HEAD~5..HEAD
+  - export PATH=$HOME/.cargo/bin:$PATH
 
 matrix:
   include:
     - env: TARGET=x86_64-unknown-linux-gnu
+      before_script:
+        - cargo install cargo-update   || echo "cargo-update already installed"
+        - cargo install cargo-travis   || echo "cargo-travis already installed"
+        - cargo install-update -a
+      after_success:
+        - cargo coveralls --verbose
+      addons:
+        apt:
+          packages:
+            - libcurl4-openssl-dev
+            - libelf-dev
+            - libdw-dev
+            - binutils-dev
+            - cmake
+          sources:
+            - kalakris-cmake
 
     - env: TARGET=x86_64-unknown-linux-gnu
       rust: nightly
@@ -41,9 +64,14 @@ script:
 after_script: set +e
 
 cache: cargo
+cache:
+  directories:
+    - /home/travis/.cargo
+
 before_cache:
   # Travis can't cache files that are not readable by "others"
   - chmod -R a+r $HOME/.cargo
+  - rm -rf /home/travis/.cargo/registry
 
 branches:
   only:
