--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ include = [
 
 [badges]
 travis-ci = { repository = "eldruin/ds323x-rs", branch = "master" }
+coveralls = { repository = "eldruin/ds323x-rs", branch = "master", service = "github" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
