--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: rust
 # sudo is required to enable kcov to use the personality syscall
 sudo: required
 
-before_script:
+before_install:
   git clone https://github.com/eldruin/rust-driver-ci-scripts ci
 
 matrix:
