--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: rust
 # sudo is required to enable kcov to use the personality syscall
 sudo: required
 
-env: DISABLE_CLIPPY=1
+env:
+  global:
+    - DISABLE_CLIPPY=1
 
 before_install:
   - git clone https://github.com/eldruin/rust-driver-ci-scripts ci
