--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,7 +92,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        rust: [1.31.0]
+        rust: [1.58.1]
         TARGET:
           - x86_64-unknown-linux-gnu
 
@@ -109,6 +109,7 @@ jobs:
       - name: Clippy
         uses: actions-rs/clippy-check@v1
         with:
+          args: --all-targets -- --allow clippy::bool_assert_comparison
           token: ${{ secrets.GITHUB_TOKEN }}
 
   test:
