--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ds323x"
-version = "0.4.0" # remember to update html_root_url
+version = "0.5.0"
 authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
 repository = "https://github.com/eldruin/ds323x-rs"
 license = "MIT OR Apache-2.0"
