--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,12 +21,12 @@ include = [
 edition = "2018"
 
 [dependencies]
-embedded-hal = "0.2.7"
+embedded-hal = "1.0.0"
 rtcc = "0.3"
 
 [dev-dependencies]
-embedded-hal-mock = "0.9.0"
-linux-embedded-hal = "0.3.2"
+embedded-hal-mock = { version = "0.11.0", features = ["eh1"] }
+linux-embedded-hal = "0.4.0"
 
 [profile.release]
 lto = true
