Finish updating to embedded-hal 1.0.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ rtcc = "0.3"
 
 [dev-dependencies]
 embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
+embedded-hal-bus = "0.2"
 linux-embedded-hal = "0.4.0"
 
 [profile.release]
