--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,13 @@ include = [
 ]
 edition = "2018"
 
+[features]
+defmt = ["dep:defmt", "rtcc/defmt"]
+
 [dependencies]
 embedded-hal = "1.0.0"
-rtcc = "0.3"
+rtcc = "0.4"
+defmt = { version = "1.0.1", optional = true }
 
 [dev-dependencies]
 embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
